--- a/Dockerfile.art
+++ b/Dockerfile.art
@@ -24,17 +24,19 @@ RUN test -d ${REMOTE_SOURCES_DIR}/cachito-gomod-with-deps || exit 1; \
  && yarn install --frozen-lockfile && yarn build
 
 # Web server container
-FROM registry.ci.openshift.org/ocp/builder:rhel-8-openshift-nginx-base-4.13.art
+FROM registry.ci.openshift.org/ocp/4.14:base
+
+ENV NGINX_VERSION=1.20
+RUN yum -y module enable nginx:$NGINX_VERSION && \
+    INSTALL_PKGS="nginx" && \
+    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
+    rpm -V $INSTALL_PKGS && \
+    yum -y clean all --enablerepo='*' && \
+    chown -R 1001:0 /var/lib/nginx /var/log/nginx /run && \
+    chmod -R ug+rwX /var/lib/nginx /var/log/nginx /run
 
 # Use none-root user
 USER 1001
-
-# Set nginx configuration
-# COPY nginx.conf /etc/nginx/nginx.conf
-
-# When using ubi9/nginx-120 defaults:
-#  listen       8080 default_server;
-#  root         /opt/app-root/src;
 
 COPY --from=build /opt/app-root/src/app/dist /opt/app-root/src
 
