--- a/Dockerfile.art
+++ b/Dockerfile.art
@@ -1,5 +1,5 @@
 # Builder container
-FROM registry.ci.openshift.org/ocp/builder:rhel-8-base-nodejs-openshift-4.15 AS build
+FROM registry.ci.openshift.org/ocp/builder:rhel-9-base-nodejs-openshift-4.16 AS build
 
 # Copy app source
 COPY . /opt/app-root/src/app
@@ -24,12 +24,10 @@ RUN test -d ${REMOTE_SOURCES_DIR}/cachito-gomod-with-deps || exit 1; \
  && yarn install --frozen-lockfile && yarn build
 
 # Web server container
-FROM registry.ci.openshift.org/ocp/4.15:base
+FROM registry.ci.openshift.org/ocp/4.16:base-rhel9
 
-ENV NGINX_VERSION=1.20
-RUN yum -y module enable nginx:$NGINX_VERSION && \
-    INSTALL_PKGS="nginx" && \
-    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
+RUN INSTALL_PKGS="nginx" && \
+    dnf install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
     yum -y clean all --enablerepo='*' && \
     chown -R 1001:0 /var/lib/nginx /var/log/nginx /run && \
