[WIP] NNS topology
Signed-off-by: Aviv Turgeman <aturgema@redhat.com>

--- a/.github/workflows/on_pull_request.yaml
+++ b/.github/workflows/on_pull_request.yaml
@@ -73,7 +73,8 @@ jobs:
         uses: cypress-io/github-action@v5.8.1
         with:
           start: yarn serve-build, yarn start-console
-          wait-on: "http://localhost:9001"
+          wait-on: 'http://localhost:9001'
+          wait-on-timeout: 120
           browser: chrome
           headed: false
 
