--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "build": "yarn clean && NODE_ENV=production yarn webpack",
     "serve-build": "yarn build && npx http-server -p 9001 dist",
     "dev": "yarn webpack serve",
-    "start-console": "./scripts/start-console.sh",
-    "create-cluster": "./scripts/deploy-cluster.sh",
-    "destroy-cluster": "./scripts/clean-cluster.sh",
-    "login-cluster": "oc login https://127.0.0.1:6443 --token abcdef.0123456789abcdef",
+    "start-console": "./start-console.sh",
     "cypress": "cypress run --browser chrome",
     "cypress:open": "cypress open",
     "i18n": "i18next \"src/**/*.{js,jsx,ts,tsx}\" [-oc] -c i18next-parser.config.mjs",
