--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@openshift-console/dynamic-plugin-sdk-webpack": "1.1.1",
     "@openshift/dynamic-plugin-sdk": "~5.0.1",
     "@openshift/dynamic-plugin-sdk-webpack": "~4.1.0",
-    "@patternfly/react-core": "5.1.1",
-    "@patternfly/react-icons": "^5.1.1",
-    "@patternfly/react-table": "^5.1.1",
-    "@patternfly/react-topology": "5.2.0",
+    "@patternfly/react-core": "6.1.1-prerelease.2",
+    "@patternfly/react-icons": "^6.1.0",
+    "@patternfly/react-table": "^6.1.0",
+    "@patternfly/react-topology": "^6.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^8.0.1",
