--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/react": "17.0.40"
   },
   "dependencies": {
+    "@preact/signals-react": "^3.0.1",
     "mocha": "^10.x",
     "word-wrap": "^1.2.5"
   }
