--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@patternfly/react-core": "6.1.1-prerelease.2",
     "@patternfly/react-icons": "^6.1.0",
     "@patternfly/react-table": "^6.1.0",
+    "@patternfly/react-templates": "6.3.0-prerelease.10",
     "@patternfly/react-topology": "^6.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.0",
