add i18n scripts to translate into all languages

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start-console": "./start-console.sh",
     "cypress": "cypress run --browser chrome",
     "cypress:open": "cypress open",
-    "i18n": "i18next \"src/**/*.{js,jsx,ts,tsx}\" [-oc] -c i18next-parser.config.mjs",
+    "i18n": "i18next \"src/**/*.{js,jsx,ts,tsx}\" [-oc] -c i18next-parser.config.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
@@ -22,7 +22,12 @@
     "test:updateSnapshot": "jest --updateSnapshot",
     "download-crds": "cd ./src/nmstate-types && ./download-nmstate-crds.sh && cd ../..",
     "helm:lint": "helm lint deployment/nmstate-console-plugin/",
-    "helm:build": "mkdir -p tmp && helm package -d tmp deployment/nmstate-console-plugin/"
+    "helm:build": "mkdir -p tmp && helm package -d tmp deployment/nmstate-console-plugin/",
+    "memsource-upload": "./i18n-scripts/memsource-upload.sh",
+    "memsource-download": "./i18n-scripts/memsource-download.sh",
+    "export-pos": "./i18n-scripts/export-pos.sh",
+    "i18n-to-po": "node ./i18n-scripts/i18n-to-po.js",
+    "po-to-i18n": "node ./i18n-scripts/po-to-i18n.js"
   },
   "devDependencies": {
     "@kubevirt-ui/kubevirt-api": "^1.4.2",
@@ -60,11 +65,13 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-testing-library": "^5.6.0",
     "http-server": "^14.1.1",
+    "i18next-conv": "12.1.1",
     "i18next-parser": "^6.5.0",
     "immer": "^9.0.16",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "mini-svg-data-uri": "^1.4.4",
+    "pluralize": "^8.0.0",
     "prettier": "^2.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
