--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,8 +18,7 @@ plugins:
   - "@typescript-eslint"
   - simple-import-sort
 rules:
-  "@typescript-eslint/no-unused-vars":
-    - error
+  "@typescript-eslint/no-unused-vars": "error"
   react/prop-types:
     - off
   prettier/prettier:
