--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "types": "./src/types/index.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
-    "start": "yarn dev",
-    "build": "yarn clean && NODE_ENV=production yarn webpack",
-    "serve-build": "yarn build && npx http-server -p 9001 dist",
-    "dev": "yarn webpack serve",
+    "start": "npm run dev",
+    "build": "npm run clean && NODE_ENV=production npm run webpack",
+    "serve-build": "npm run build && npx http-server -p 9001 dist",
+    "dev": "npm run webpack serve",
+    "webpack": "webpack",
     "start-console": "./start-console.sh",
     "cypress": "cypress run --browser chrome",
     "cypress:open": "cypress open",
@@ -35,7 +36,6 @@
     "@openshift-console/dynamic-plugin-sdk-internal": "4.20.0",
     "@openshift-console/dynamic-plugin-sdk-webpack": "4.20.0",
     "@openshift/dynamic-plugin-sdk": "~5.0.1",
-    "@openshift/dynamic-plugin-sdk-webpack": "~4.1.0",
     "@patternfly/react-core": "6.1.1-prerelease.2",
     "@patternfly/react-icons": "^6.1.0",
     "@patternfly/react-table": "^6.1.0",
@@ -54,10 +54,10 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "classnames": "^2.5.1",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.7.1",
-    "cypress": "11",
-    "eslint": "^8.18.0",
+    "cypress": "^15.9.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.30.1",
@@ -66,35 +66,31 @@
     "eslint-plugin-testing-library": "^5.6.0",
     "http-server": "^14.1.1",
     "i18next-conv": "12.1.1",
-    "i18next-parser": "^6.5.0",
+    "i18next-parser": "^9.3.0",
     "immer": "^9.0.16",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "mini-svg-data-uri": "^1.4.4",
     "pluralize": "^8.0.0",
     "prettier": "^2.7.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-i18next": "^11.7.3",
     "react-router": "5.3.x",
     "react-router-dom": "5.3.x",
     "react-router-dom-v5-compat": "^6.22.3",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
+    "sass": "^1.97.3",
+    "sass-loader": "^16.0.6",
     "style-loader": "^3.3.1",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.9.4",
+    "typescript": "5.7.x",
     "use-immer": "^0.8.1",
-    "webpack": "5.90.3",
-    "webpack-cli": "4.10.x",
-    "webpack-dev-server": "^4.7.4"
-  },
-  "resolutions": {
-    "webpack": "^5.68.0",
-    "@types/react": "17.0.40"
+    "webpack": "^5.104.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "^5.2.3"
   },
   "dependencies": {
     "@preact/signals-react": "^3.0.1",
