--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "react-router": "5.3.x",
     "react-router-dom": "5.3.x",
     "react-router-dom-v5-compat": "^6.22.3",
-    "sass": "^1.97.3",
-    "sass-loader": "^16.0.6",
+    "sass": "^1.97.1",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.8.1",
@@ -96,5 +96,8 @@
     "esbuild-loader": "^4.4.2",
     "mocha": "^10.x",
     "word-wrap": "^1.2.5"
+  },
+  "overrides": {
+    "@parcel/watcher": "2.5.1"
   }
 }
